mobile detection, dynamic image dimension detection

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Dash Ecosystem - Interactive Infographic</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel="prefetch" href="tiles/ImageProperties.xml">
     <script src="openseadragon.min.js"></script>
     <script src='main.js'></script>
 </head>
