resizing, dom structure, fullscreen sidebar button

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel="prefetch" href="tiles/ImageProperties.xml">
-    <link rel="stylesheet" href="semantic.min.css">
     <script src="openseadragon.min.js"></script>
     <script src='main.js'></script>
 </head>
@@ -20,10 +19,15 @@
             <div class="sidebarLinkContainer">
 
             </div>
+            <div class="sidebarFooter">
+                footer text
+            </div>
         </nav>
             
         <div id="viewer">
+            <div id="annotationContainer">
 
+            </div>
         </div>
     </body>
 </html>
