language menu and switch

--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
             <div class="sidebar-link-container">
             </div>
             <div class="sidebar-footer">
-                footer text
+                <select name="language" id="language">
+                    <option value="en">English</option>
+                    <option value="es">Spanish</option>
+                  </select>
             </div>
         </nav>
             
