separated config into file, dynamic lang loading

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel="prefetch" href="tiles/ImageProperties.xml">
     <link rel="stylesheet" href="main.css">
     <script src="openseadragon.min.js"></script>
+    <script src='config.js'></script>
     <script src='main.js'></script>
 </head>
     <body>
@@ -21,9 +21,7 @@
             </div>
             <div class="sidebar-footer">
                 <select name="language" id="language">
-                    <option value="en">English</option>
-                    <option value="es">Spanish</option>
-                  </select>
+                </select>
             </div>
         </nav>
             
