--- a/index.html
+++ b/index.html
@@ -19,10 +19,9 @@
                 </a>
             </div>
             <div class="sidebar-link-container">
+                <div id="lang-select" class="sidebar-item"></div>
             </div>
             <div class="sidebar-footer">
-                <select name="language" id="language">
-                </select>
             </div>
         </nav>
             
