--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
                     <img class="logo" src="images/logo.png" alt="logo">
                 </a>
             </div>
-            <div class="sidebar-link-container">
+            <div class="sidebar-link-container" id="sidebar-link-container">
                 <div id="lang-select" class="sidebar-item"></div>
             </div>
             <div class="sidebar-footer">
+                © Dash Incubator
             </div>
         </nav>
-            
         <div id="viewer">
             <div id="annotation-container">
                 <input id="annotation-toggle" class="annotation-toggle" type="checkbox">
